# mathground

./: .gitignore  Cargo.toml
examples/: binomial_distribution.rs  condensor.rs  differential.rs  normal.rs  population_plot.rs  scatter_plot.rs  sin.rs
src/: combination.rs  lib.rs  stats.rs
src/stats/: core.rs  data_set.rs  error.rs  population.rs  scatter_plot.rs
