[package]
name = "mathground"
version = "0.1.0"
authors = ["ymgyt <yamaguchi7073xtt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.11"
plotlib = "0.5.1"
svg = "0.7.2"
anyhow = "1.0.28"
rand = "0.7.3"
statrs = "0.12.0"
